[project]
name = "bioplotkit"
version = "1.0.2"
description = "A Python package for advanced biological data visualization."
requires-python = ">=3.7.0"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas", # Base dependency
    "adjustText", # For pcshow.py
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bioplotkit"]